# SentinalOps

./: .coverage  .env.example  .flake8  .gitignore  .gitmessage  .pre-commit-config.yaml  ADVERSARIAL_EVALUATION_REPORT.md  AI_SAFETY_SCORING_REPORT.md  ARCHITECTURE_RISK_REGISTER.md  AUTONOMOUS_DECISION_SCORECARD.md  CHANGELOG.md  CHECKPOINT_INTEGRITY_REPORT.md  CONCURRENCY_TEST_RESULTS.md  CONFIDENCE_CALIBRATION_REPORT.md  CONTRIBUTING.md  DEGRADED_MODE_DESIGN.md  EXECUTION_RECOVERY_REPORT.md  FINAL_ENGINEERING_REPORT.md  HALLUCINATION_ANALYSIS.md  INCIDENT_EVAL_SUITE.md  INCIDENT_LIFECYCLE_TRACE.md  INCIDENT_SURVIVABILITY_REPORT.md  KNOWN_LIMITATIONS.md  Makefile  OPERATOR_TRUST_ANALYSIS.md  ORCHESTRATION_STABILITY_REPORT.md  PRD.md  PRODUCTION_BLOCKERS.md  PROVIDER_FAILOVER_TRACE.md  QUEUE_RESILIENCE_ANALYSIS.md  README.md  REGRESSION_EVAL_FRAMEWORK.md  REMEDIATION_QUALITY_REPORT.md  REPRODUCIBILITY_REPORT.md  RESILIENCE_IMPLEMENTATION_REPORT.md  ROUTER_RESILIENCE_ANALYSIS.md  RUNTIME_DIAGNOSTICS_REPORT.md  SECURITY.md  STUDY_GUIDE.md  SentinelOps 50 Phase Roadmap.md  (+8 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml  e2e.yml  evaluation.yml  integration.yml
apps/api-server/: .coveragerc  Dockerfile  requirements.txt
apps/web-dashboard/: Dockerfile  package.json  tsconfig.json
configs/development/: past_incidents.json  patterns.json  postmortem_template.md  rootcause_weights.yaml  (+1 more)
docs/: branching.md  demo-script.md  getting-started.md  prd-compliance-checklist.md  technical-note-why-automated-rca-is-hard.md
infrastructure/: render.yaml
scripts/: seed_e2e.py
sentinel-common/: pyproject.toml
sentinel-docs/: README.md  architecture.md
sentinel-eval/: pyproject.toml
sentinel-runtime/: pyproject.toml
sentinel-sim/: pyproject.toml
sentinel-ui/: README.md  package.json
(+640 files in other folders)
